--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,10 @@ body {
     min-height: 100vh;
 }
 
-.menu-btn {
+
+/* Hamburger menu */
+
+.menu_btn {
     position: relative;
     display: flex;
     justify-content: center;
@@ -20,6 +23,44 @@ body {
     width: 80px;
     height: 80px;
     cursor: pointer;
-    transition: all .5s ease-in-out;
+    transition: all 1s ease-in-out;
     border: 3px solid white;
+}
+
+.menu_btn_closed {
+    width: 50px;
+    height: 6px;
+    background-color: white;
+    border-radius: 5px;
+    transition: all 1s ease-in-out;
+}
+
+.menu_btn_closed::before,
+.menu_btn_closed::after {
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 6px;
+    background: white;
+    border-radius: 5px;
+    transition: all 1s ease-in-out;
+}
+
+.menu_btn_closed::before {
+    transform: translateY(-16px);
+}
+
+.menu_btn_closed::after {
+    transform: translateY(16px);
+}
+
+.menu_btn.open,
+.menu_btn_closed {
+    transform: translateX(-50px);
+    background: transparent;
+}
+
+.menu_btn.open,
+.menu_btn_closed::before {
+    transform: rotate(45deg) translate(35px, -35px);
 }
