--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,8 @@ body {
 .menu_btn_closed::before {
     transform: rotate(45deg) translate(35px, -35px);
 }
+
+.menu_btn.open,
+.menu_btn_closed::after {
+    transform: rotate(-45deg) translate(35px, 35px);
+}
