--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
         padding-left: 100px;
         padding-right: 100px;
         margin: 0 auto;
+        width: 100%;
     }
     
     header {
@@ -21,6 +22,7 @@
         top: 0;
         left: 0;
         right: 0;
+        z-index: 100;
     }
     
     header .container {
@@ -41,9 +43,32 @@
         text-decoration: none;
     }
     
-    main .top {
+    main .article {
+        position: relative;
         min-height: 100vh;
         display: flex;
+        align-items: center;
+        background-image: url('../img/nail.jpg');
+        background-position: top right;
+        background-size: cover;
+    }
+    
+    main .article::after {
+        content: '';
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 0;
+        background-color: lightskyblue;
+        opacity: 0.5;
+    }
+    
+    main .container {
+        position: relative;
+        z-index: 1;
     }
     /* Hamburger menu 
 
