--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,9 @@
         padding-bottom: 30px;
     }
     
-    header .nav {
+    header .menu-desktop {
         display: grid;
-        grid-gap: 15px;
+        grid-gap: 30px;
         grid-template-columns: repeat(4, auto);
     }
     
