--- a/css/style.css
+++ b/css/style.css
@@ -1,117 +1,51 @@
-.container-nav,
-.container-mid {
+div {
+    /* remove at the end */
+    border: 1px black solid;
+    /*  remove at the end */
+    margin: 0 auto;
+}
+
+.container-top,
+.container-mid,
+.container-bot {
+    display: flex;
     max-width: 1600px;
     margin: 0 auto;
     padding-left: 100px;
     padding-right: 100px;
     width: 100%;
+    padding: 10px;
 }
 
-header {
-    position: fixed;
+.container-top {
+    height: 15%;
+}
+
+.container-mid {
+    height: 65%;
+}
+
+.box1,
+.box4 {
+    width: 30%;
+}
+
+.box2,
+.box5 {
+    width: 70%;
+}
+
+.box3 {
     width: 100%;
-    opacity: 0.7;
-    z-index: 99;
 }
 
-header .container-nav {
-    padding-top: 30px;
-    padding-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-}
-
-header .container-nav h2 {
-    font-size: 30px;
-    color: white;
-}
-
-header .container-nav nav {
-    padding-right: 120px;
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(4, auto);
-}
-
-header .container-nav nav a {
-    text-decoration: none;
-    color: white;
-}
-
-main section .container-mid {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    background-clip url(/img);
-    background-size: cover;
-}
-
-main .container-mid h1 {
-    color: white;
-    z-index: 1;
-}
-
-main section.middle {
-    position: relative;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-}
-
-
-/* Hamburger menu 
-
-.menu_btn {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80px;
-    height: 80px;
-    cursor: pointer;
-    transition: all 1s ease-in-out;
-    border: 3px solid white;
-}
-
-.menu_btn_closed {
-    width: 50px;
-    height: 6px;
-    background-color: white;
-    border-radius: 5px;
-    transition: all 1s ease-in-out;
-}
-
-.menu_btn_closed::before,
-.menu_btn_closed::after {
-    content: '';
+.video {
     position: absolute;
-    width: 50px;
-    height: 6px;
-    background: white;
-    border-radius: 5px;
-    transition: all 1s ease-in-out;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.8;
+    min-height: 100vh;
 }
-
-.menu_btn_closed::before {
-    transform: translateY(-16px);
-}
-
-.menu_btn_closed::after {
-    transform: translateY(16px);
-}
-
-.menu_btn.open .menu_btn_closed {
-    transform: translateX(-50px);
-    background: transparent;
-}
-
-.menu_btn.open .menu_btn_closed::before {
-    transform: rotate(45deg) translate(35px, -35px);
-}
-
-.menu_btn.open .menu_btn_closed::after {
-    transform: rotate(-45deg) translate(35px, 35px);
-}
-
-*/
