--- a/css/style.css
+++ b/css/style.css
@@ -49,3 +49,17 @@ div {
     opacity: 0.8;
     min-height: 100vh;
 }
+
+.box2 {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(4, auto);
+    align-items: center;
+    justify-content: right;
+    padding-right: 2%;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
