--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,8 @@ a {
     color: black;
 }
 
-.video .container-top h3 {
-    align-content: center;
+.logo {
+    display: grid;
+    align-content: flex-end;
+    padding-left: 20px;
 }
