--- a/css/style.css
+++ b/css/style.css
@@ -82,5 +82,16 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.8
+    opacity: 0.9;
+}
+
+.overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    background: rgb(3, 17, 54);
+    opacity: 0.4;
+    mix-blend-mode: overlay;
 }
