--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-div {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+</style>div {
     /* remove at the end */
     border: 1px black solid;
     /*  remove at the end */
@@ -15,7 +17,53 @@ div {
     padding-right: 100px;
     width: 100%;
     padding: 10px;
-    z-index: 10;
+}
+
+a {
+    z-index: 100;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+h3 {
+    z-index: 100;
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+}
+
+h2 {
+    z-index: 100;
+    text-decoration: none;
+    color: white;
+    font-size: 12px;
+    font-family: 'Kaushan Script', cursive;
+    font-weight: 700;
+}
+
+.logo-span {
+    font-size: 10px;
+    font-weight: 700;
+}
+
+span {
+    font-size: 40px;
+    font-weight: 700;
+}
+
+h4 {
+    z-index: 100;
+    text-decoration: none;
+    color: white;
+    font-size: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
 }
 
 .container-top {
@@ -32,7 +80,7 @@ div {
 }
 
 .box2,
-.box5 {
+.social {
     width: 70%;
 }
 
@@ -57,19 +105,14 @@ div {
     grid-gap: 50px;
     grid-template-columns: repeat(4, auto);
     justify-content: right;
-    align-content: flex-end;
+    align-content: center;
     padding-right: 20px;
-}
-
-a {
-    text-decoration: none;
-    color: black;
 }
 
 .logo {
     display: grid;
     align-content: flex-end;
-    padding-left: 20px;
+    padding-left: 100px;
 }
 
 video {
@@ -82,7 +125,7 @@ video {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    opacity: 0.9;
+    opacity: 0.95;
 }
 
 .overlay {
@@ -91,7 +134,25 @@ video {
     position: absolute;
     top: 0px;
     left: 0px;
-    background: rgb(3, 17, 54);
-    opacity: 0.4;
+    background: rgba(2, 14, 46, 0.651);
+    opacity: 0.7;
     mix-blend-mode: overlay;
+}
+
+.social {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    justify-content: right;
+    align-content: center;
+    padding-right: 100px;
+    grid-gap: 50px;
+}
+
+.box3,
+.box4 {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    align-content: center;
+    padding-left: 100px;
+    grid-gap: 50px;
 }
