--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,8 @@ h3 {
     font-weight: 700;
 }
 
-h2 {
+h2,
+h2 a {
     z-index: 100;
     text-decoration: none;
     color: white;
@@ -144,7 +145,7 @@ video {
     grid-template-columns: repeat(3, auto);
     justify-content: right;
     align-content: center;
-    padding-right: 100px;
+    padding-right: 20px;
     grid-gap: 50px;
 }
 
@@ -155,4 +156,9 @@ video {
     align-content: center;
     padding-left: 100px;
     grid-gap: 50px;
+}
+
+a:hover,
+h4:hover {
+    transform: scale(1.5);
 }
