--- a/css/style.css
+++ b/css/style.css
@@ -171,8 +171,8 @@ h4:hover {
     transform: scale(1.5);
 }
 
-.box3 {
-    display: grid;
+.map {
+    display: flex;
     width: 100%;
     height: 100%;
     margin: 0;
