--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+div {
+    /* remove at the end */
+    border: 1px black solid;
+    /*  remove at the end */
+    margin: 0 auto;
+}
+
 .container-top,
 .container-mid,
 .container-bot {
     display: flex;
     max-width: 1600px;
     margin: 0 auto;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 10%;
+    padding-right: 10%;
     width: 100%;
     padding: 10px;
 }
@@ -104,17 +111,17 @@ h4 {
 .box2 nav {
     height: 100%;
     display: grid;
-    grid-gap: 50px;
+    grid-gap: 8%;
     grid-template-columns: repeat(4, auto);
     justify-content: right;
     align-content: center;
-    padding-right: 20px;
+    padding-right: 5%;
 }
 
 .logo {
     display: grid;
     align-content: flex-end;
-    padding-left: 100px;
+    padding-left: 5%;
 }
 
 video {
@@ -146,7 +153,7 @@ video {
     grid-template-columns: repeat(3, auto);
     justify-content: right;
     align-content: center;
-    padding-right: 20px;
+    padding-right: 5%;
     grid-gap: 50px;
 }
 
@@ -155,8 +162,8 @@ video {
     display: grid;
     grid-template-columns: repeat(3, auto);
     align-content: center;
-    padding-left: 100px;
-    grid-gap: 50px;
+    padding-left: 5%;
+    grid-gap: 10%;
 }
 
 .hover:hover,
@@ -171,5 +178,7 @@ h4:hover {
     margin: 0;
     align-content: center;
     justify-content: left;
-    gap: 20px;
+    gap: 5%;
 }
+
+992 688
