--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ li {
 }
 
 .services1 {
-    background: url(/img/nails-5730756_1920.jpg);
+    background: url(img/nails-5730756_1920.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
@@ -206,7 +206,7 @@ li {
 }
 
 .services2 {
-    background: url(/img/eye-2153580_1920.jpg);
+    background: url(img/eye-2153580_1920.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
@@ -214,7 +214,7 @@ li {
 }
 
 .services3 {
-    background: url(/img/eye-3150089.jpg);
+    background: url(img/eye-3150089.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
